chassis-core/tests/ui/slice_then_insert_loop.stderr
error[E0502]: cannot borrow `storage` as mutable because it is also borrowed as immutable
  --> tests/ui/slice_then_insert_loop.rs:17:9
   |
12 |     let slice = storage.get_vector_slice(0).unwrap();
   |                 ------- immutable borrow occurs here
...
17 |         storage.insert(&vec![i as f32; 128]).unwrap();
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ mutable borrow occurs here
...
20 |     println!("{}", slice[0]);
   |                    -------- immutable borrow later used here
